[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tatic_lib = { path = "../tatic_lib" }
anyhow = "1.0.100"
chrono = "0.4.42"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["tokio"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
